--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDi2oAx4oD8hQSFZ-VJ-8QUUIO-04YFN4oRw&usqp=CAU",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
