--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "react": "^18.2.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
